# logbroker

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  config.json  docker-run.sh  index.html  main.cpp
controllers/: CMakeLists.txt  health_check.cpp  health_check.h  show_create_table.cpp  show_create_table.h  write_log.cpp  write_log.h
deploy/scripts/: clickhouse.sh  deploy_all.sh  deploy_clickhouse.yml  deploy_logbroker.yml  generate_ansible.py  install_docker.yml  logbroker.sh  run_ansible.sh  update_logbroker.sh  update_logbroker.yml
deploy/terraform/: main.tf  run_terraform.sh
deploy/terraform/templates/: .terraform-meta-template  .tfvars-template
libs/: CMakeLists.txt  clickhouse_connector.cpp  clickhouse_connector.h  helpers.cpp  helpers.h  persistent_logger.cpp  persistent_logger.h
terraform/: main.tf
test/: CMakeLists.txt  post_logs.py
